# aspell

./: CMakeLists.txt  ConfigureChecks.cmake
interfaces/cc/: aspell.h
lib/: new_fmode.cpp  string_pair_enumeration-c.cpp
modules/filter/: tex.cpp
prog/: aspell.cpp  check_funs.cpp
